# PanCrack

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.nKQDxa  CMakeLists.txt.user.3df7f43  CMakeLists.txt.user.7973fe0  OnDeploy.ps1  PanCrack.qmlproject  PanCrack.qmlproject.qtds  PanCrack.qmlproject.qtds.26fb03c  README.md  RequiredOnDeploy.txt  qds.cmake
App/: .tmp-graphs.json  CMakeLists.txt  CMakeLists.txt.user.3df7f43  CMakeLists.txt.user.9798948  commandparser.cpp  dataconverse.cpp  graphdraw.cpp  listcommands.cpp  main.cpp  signals.cpp
App/autogen/: environment.h
App/cominf/: algorithm.json  check.json  clear-helper.pseudohtml  clear.json  color.json  create.json  draw.json  find.json  game.json  help.json  prufer.json  show.json  view.json
App/cominf/help/: algorithm.html  check.html  clear.html  color.html  create.html  draw.html  find.html  game.html  help.html  prufer.html  show.html  view.html
App/commands/: algorithmcommand.cpp  checkcommand.cpp  clearcommand.cpp  colorcommand.cpp  createcommand.cpp  drawcommand.cpp  findcommand.cpp  gamecommand.cpp  helpcommand.cpp  ilyuacommand.cpp  prufercommand.cpp  showcommand.cpp  viewcommand.cpp
App/constrcom/: CMakeLists.txt  main.cpp
App/data/: clear.json
App/include/: commandparser.h  dataconverse.h  graphdraw.h  listcommands.h  signals.h
App/include/commands/: algorithmcommand.h  checkcommand.h  clearcommand.h  colorcommand.h  createcommand.h  drawcommand.h  findcommand.h  gamecommand.h  helpcommand.h  ilyuacommand.h  prufercommand.h  showcommand.h  viewcommand.h
App/include/commands/macros/: commacros.h
App/tasks/: CMakeLists.txt  graph.cpp  hamilton.cpp  task0.cpp  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
App/tasks/include/: graph.h  hamilton.h  task0.h  task1.h  task10.h  task11.h  task12.h  task2.h  task3.h  task4.h  task5.h  task6.h  task7.h  task8.h  task9.h  test_task.h
App/tests/: CMakeLists.txt  CMakeLists.txt.user.3df7f43  CMakeLists.txt.user.autosave  main_test.cpp  test.cpp  testgraph.cpp  testtask0.cpp  testtask1.cpp  testtask10.cpp  testtask11.cpp  testtask12.cpp  testtask2.cpp  testtask3.cpp  testtask4.cpp  testtask5.cpp  testtask6.cpp  testtask7.cpp  testtask8.cpp  testtask9.cpp
App/tests/hpp_test/: test.hpp  test1.hpp
App/tests/include/: mynotfirsttest.h  testgraph.h  testtask0.h  testtask1.h  testtask10.h  testtask11.h  testtask12.h  testtask2.h  testtask3.h  testtask4.h  testtask5.h  testtask6.h  testtask7.h  testtask8.h  testtask9.h  testtest_task.h
PanCrack/: CMakeLists.txt  Constants.qml  qmldir
PanCrack/designer/: plugin.metainfo
PanCrackContent/: AntivirusTerminal.qml  App.qml  Bsod.qml  CMakeLists.txt  CommandLine.qml  CommandSingleLine.qml  CommandSingleOutput.qml  Cursor.qml  CustomCursor.qml  DialogInput.qml  DuplicateWindow.qml  GraphCanvas.qml  GraphDraw.qml  Loading.qml  Screen01.ui.qml  Scrimer.qml
PanCrackContent/js/: console_utils.js  draw_utils.js
cmake/: cominf.cmake  crtsrc.cmake
